# agentboiler

./: .env.example  .gitignore  CUSTOMIZATION.md  README.md  pyproject.toml  schema.sql
app/: .env.example  agent.py  approval_queue.py  auth.py  capabilities.py  config.py  db.py  exceptions.py  main.py  stripe_client.py  tools.py
app/dependencies/: auth.py
app/middleware/: plan_enforcement.py  tool_counter.py
app/routers/: billing.py  chat.py  usage.py
app/utils/: token_cost.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/approvals/: route.ts
frontend/app/api/approvals/[id]/: route.ts
frontend/app/approvals/: page.tsx
frontend/components/: UsageWidget.tsx
tests/: auth_helpers.py  test_approval_flow.py  test_auth.py  test_billing.py  test_chat_usage.py  test_plan_enforcement.py  test_token_cost.py  test_usage.py
